// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`end-to-end formatting > advanced WGSL features > collapses multiple blank lines between top-level decls 1`] = `
"const pi = radians(180f);

const tau = radians(360f);

const workgroup_size: u32 = 128;
"
`;

exports[`end-to-end formatting > advanced WGSL features > formats atomic struct and atomic builtins 1`] = `
"struct Pixel {
  r: atomic<u32>,
  g: atomic<u32>,
  b: atomic<u32>,
  hits: atomic<u32>,
}

@group(0) @binding(1) var<storage, read_write> data: array<Pixel>;
@group(0) @binding(4) var<storage, read_write> globalMaxHits: atomic<u32>;

fn f(flatIdx: u32, c: vec3<u32>, threadMaxHits: u32) {
  atomicAdd(&data[flatIdx].r, c.r);
  atomicAdd(&data[flatIdx].g, c.g);
  atomicAdd(&data[flatIdx].b, c.b);
  let hits = atomicAdd(&data[flatIdx].hits, 1u) + 1u;
  atomicMax(&globalMaxHits, threadMaxHits);
}
"
`;

exports[`end-to-end formatting > advanced WGSL features > formats builtins: bitcast, select, arrayLength, typed vec constructor 1`] = `
"fn f(buf: ptr<function, u32>) {
  var seed: u32 = bitcast<u32>((p.x + idx) * 0.345234);
  let x = select(v.x, v.x * 2.0, v.x < 0.0);
  let n = arrayLength(&ifsFunctions);
  let v = vec2<f32>(0);
}
"
`;

exports[`end-to-end formatting > advanced WGSL features > formats compute shader excerpt with bare block, nested for, continue, atomicAdd, bitcast 1`] = `
"@compute @workgroup_size(128)
fn computeMain(
  @builtin(num_workgroups) num_workgroups_vec: vec3<u32>,
  @builtin(workgroup_id) workgroup_id: vec3<u32>,
  @builtin(global_invocation_id) global_id: vec3<u32>,
  @builtin(local_invocation_index) local_invocation_index: u32,
) {
  let idx = f32(global_id.x);
  var p: vec2<f32>;
  {
    let percent = idx / f32(1024);
    let angle = fract(percent + 0.5) * 6.28 * 25;
    p = vec2<f32>(sin(angle), cos(angle)) * (0.2 + 1.8 * sin(percent * 3.14));
  }
  var seed: u32 = bitcast<u32>((p.x + idx) * 0.345234);
  for (var i = 0u; i < 100u; i++) {
    let funcIdx = u32(floor(xor_shift(&seed) * f32(4)));
    if i < 20u {
      continue;
    }
    for (var j = 0u; j < 4u; j++) {
      let flatIdx: u32 = 0u;
      atomicAdd(&data[flatIdx].r, 1u);
    }
  }
}
"
`;

exports[`end-to-end formatting > advanced WGSL features > formats numeric literals with suffixes 1`] = `
"const pi = radians(180f);
const tau = radians(360f);

fn f() {
  var threadMaxHits = 300u;
  let numIters = u32(uniforms.num_iters);
  for (var i = 0u; i < numIters; i++) {
    if i < 20u {
      continue;
    }
  }
}
"
`;

exports[`end-to-end formatting > advanced WGSL features > formats xor_shift function with ptr, deref, xor-assign, shift, hex 1`] = `
"fn xor_shift(state: ptr<function, u32>) -> f32 {
  var x = *state;
  x ^= x << 13u;
  x ^= x >> 17u;
  x ^= x << 5u;
  *state = x;
  return f32(x) / f32(0xFFFFFFFF);
}
"
`;

exports[`end-to-end formatting > comments > preserves block comments 1`] = `
"/* Block comment */
const x = 1;
"
`;

exports[`end-to-end formatting > comments > preserves line comments 1`] = `
"// This is a shader
const x = 1;
"
`;

exports[`end-to-end formatting > formats a complete vertex shader 1`] = `
"struct VertexOutput {
  @builtin(position) position: vec4f,
  @location(0) color: vec4f,
}

@group(0) @binding(0) var<uniform> mvp: mat4x4<f32>;

@vertex
fn vs_main(@location(0) position: vec3f, @location(1) color: vec4f) -> VertexOutput {
  var output: VertexOutput;
  output.position = mvp * vec4f(position, 1.0);
  output.color = color;
  return output;
}
"
`;

exports[`end-to-end formatting > formats a compute shader 1`] = `
"@group(0) @binding(0) var<storage, read_write> data: array<f32>;

@compute @workgroup_size(64)
fn main(@builtin(global_invocation_id) id: vec3u) {
  let i = id.x;
  data[i] = data[i] * 2.0;
}
"
`;

exports[`end-to-end formatting > formats a fragment shader with if/else 1`] = `
"@fragment
fn fs_main(@location(0) color: vec4f) -> @location(0) vec4f {
  if color.a < 0.1 {
    discard;
  }
  return color;
}
"
`;

exports[`end-to-end formatting > formats a mandelbrot shader with directives, switch, and loop/continuing 1`] = `
"enable f16;
diagnostic(off, derivative_uniformity);

const MAX_ITER: u32 = 100;
const ESCAPE_RADIUS: f32 = 4.0;

struct FragInput {
  @builtin(position) pos: vec4<f32>,
}

@group(0) @binding(0) var<uniform> zoom: f32;
@group(0) @binding(1) var<uniform> center: vec2<f32>;
@group(0) @binding(2) var<uniform> colorMode: u32;

fn mandelbrot(c: vec2<f32>) -> u32 {
  var z = vec2<f32>(0.0, 0.0);
  var i: u32 = 0;
  loop {
    if i >= MAX_ITER {
      break;
    }
    let zNew = vec2f(z.x * z.x - z.y * z.y + c.x, 2.0 * z.x * z.y + c.y);
    z = zNew;
    if dot(z, z) > ESCAPE_RADIUS {
      break;
    }
    continuing {
      i = i + 1;
    }
  }
  return i;
}

fn colorize(iter: u32) -> vec4f {
  if iter == MAX_ITER {
    return vec4f(0.0, 0.0, 0.0, 1.0);
  }
  let t = f32(iter) / f32(MAX_ITER);
  switch colorMode {
    case 0: {
      return vec4f(t, t, t, 1.0);
    }
    case 1: {
      return vec4f(t, 0.5 * t, 0.0, 1.0);
    }
    case 2, 3: {
      return vec4f(0.0, t, 1.0 - t, 1.0);
    }
    default: {
      return vec4f(1.0, 0.0, 1.0, 1.0);
    }
  }
}

@fragment
fn fs_main(input: FragInput) -> @location(0) vec4f {
  let uv = (input.pos.xy / vec2f(800.0, 600.0)) * 2.0 - vec2f(1.0);
  let c = center + uv * zoom;
  let iter = mandelbrot(c);
  return colorize(iter);
}
"
`;

exports[`end-to-end formatting > formats a particle simulation compute shader 1`] = `
"struct Particle {
  pos: vec3<f32>,
  vel: vec3<f32>,
  life: f32,
}

struct SimParams {
  deltaTime: f32,
  gravity: vec3<f32>,
  maxSpeed: f32,
}

@group(0) @binding(0) var<uniform> params: SimParams;
@group(0) @binding(1) var<storage, read> particlesIn: array<Particle>;
@group(0) @binding(2) var<storage, read_write> particlesOut: array<Particle>;

@compute @workgroup_size(64)
fn simulate(@builtin(global_invocation_id) gid: vec3u) {
  let idx = gid.x;
  var p = particlesIn[idx];
  if p.life <= 0.0 {
    return;
  }
  p.vel = p.vel + params.gravity * params.deltaTime;
  let speed = length(p.vel);
  if speed > params.maxSpeed {
    p.vel = normalize(p.vel) * params.maxSpeed;
  }
  p.pos = p.pos + p.vel * params.deltaTime;
  p.life = p.life - params.deltaTime;
  particlesOut[idx] = p;
}
"
`;

exports[`end-to-end formatting > formats a vertex + fragment shader with textures 1`] = `
"struct VertexInput {
  @location(0) position: vec3<f32>,
  @location(1) normal: vec3<f32>,
  @location(2) uv: vec2<f32>,
}

struct VertexOutput {
  @builtin(position) clipPos: vec4<f32>,
  @location(0) worldNormal: vec3<f32>,
  @location(1) texCoord: vec2<f32>,
}

struct Uniforms {
  model: mat4x4<f32>,
  viewProj: mat4x4<f32>,
  lightDir: vec3<f32>,
  ambient: f32,
}

@group(0) @binding(0) var<uniform> u: Uniforms;
@group(0) @binding(1) var texSampler: sampler;
@group(0) @binding(2) var texAlbedo: texture_2d<f32>;

@vertex
fn vs(input: VertexInput) -> VertexOutput {
  var out: VertexOutput;
  let worldPos = u.model * vec4f(input.position, 1.0);
  out.clipPos = u.viewProj * worldPos;
  out.worldNormal = normalize((u.model * vec4f(input.normal, 0.0)).xyz);
  out.texCoord = input.uv;
  return out;
}

@fragment
fn fs(v: VertexOutput) -> @location(0) vec4f {
  let albedo = textureSample(texAlbedo, texSampler, v.texCoord);
  let nDotL = max(dot(v.worldNormal, u.lightDir), 0.0);
  let diffuse = albedo * nDotL;
  let ambient = albedo * u.ambient;
  return diffuse + ambient;
}
"
`;

exports[`end-to-end formatting > formats address-of and dereference 1`] = `
"fn f() {
  let p = &v;
  let x = *p;
}
"
`;

exports[`end-to-end formatting > formats all compound assignment operators > compound assignment %= 1`] = `
"fn f() {
  x %= 1;
}
"
`;

exports[`end-to-end formatting > formats all compound assignment operators > compound assignment &= 1`] = `
"fn f() {
  x &= 1;
}
"
`;

exports[`end-to-end formatting > formats all compound assignment operators > compound assignment *= 1`] = `
"fn f() {
  x *= 1;
}
"
`;

exports[`end-to-end formatting > formats all compound assignment operators > compound assignment += 1`] = `
"fn f() {
  x += 1;
}
"
`;

exports[`end-to-end formatting > formats all compound assignment operators > compound assignment /= 1`] = `
"fn f() {
  x /= 1;
}
"
`;

exports[`end-to-end formatting > formats all compound assignment operators > compound assignment ^= 1`] = `
"fn f() {
  x ^= 1;
}
"
`;

exports[`end-to-end formatting > formats all compound assignment operators > compound assignment |= 1`] = `
"fn f() {
  x |= 1;
}
"
`;

exports[`end-to-end formatting > formats all compound assignment operators > compound assignment -= 1`] = `
"fn f() {
  x -= 1;
}
"
`;

exports[`end-to-end formatting > formats const_assert 1`] = `
"const_assert true;
"
`;

exports[`end-to-end formatting > formats deeply nested member/index access 1`] = `
"fn f() {
  a.b[i].c[j].d = 1;
}
"
`;

exports[`end-to-end formatting > formats empty struct 1`] = `
"struct Empty {}
"
`;

exports[`end-to-end formatting > formats multiple directives before declarations 1`] = `
"enable f16;
diagnostic(off, derivative_uniformity);

const X = 1;
"
`;

exports[`end-to-end formatting > formats nested expressions correctly 1`] = `
"const x = (a + b) * (c - d) / e;
"
`;

exports[`end-to-end formatting > formats parenthesized expressions 1`] = `
"const x = (a + b);
"
`;

exports[`end-to-end formatting > formats switch with multiple case selectors 1`] = `
"fn f() {
  switch x {
    case 1, 2, 3: {
      break;
    }
    default: {
      break;
    }
  }
}
"
`;

exports[`end-to-end formatting > handles override with attributes 1`] = `
"@id(0) override blockSize: u32 = 64;
"
`;

exports[`end-to-end formatting > preserves boolean literals 1`] = `
"const a = true;
const b = false;
"
`;

exports[`end-to-end formatting > real-world shaders (from gfx-rs/wgpu, Apache-2.0/MIT) > formats boids compute shader 1`] = `
"// Source: https://github.com/gfx-rs/wgpu/blob/trunk/examples/features/src/boids/compute.wgsl
// License: Apache-2.0 / MIT (https://github.com/gfx-rs/wgpu/blob/trunk/LICENSE.MIT)

struct Particle {
  pos: vec2<f32>,
  vel: vec2<f32>,
}

struct SimParams {
  deltaT: f32,
  rule1Distance: f32,
  rule2Distance: f32,
  rule3Distance: f32,
  rule1Scale: f32,
  rule2Scale: f32,
  rule3Scale: f32,
}

@group(0) @binding(0) var<uniform> params: SimParams;
@group(0) @binding(1) var<storage, read> particlesSrc: array<Particle>;
@group(0) @binding(2) var<storage, read_write> particlesDst: array<Particle>;

// https://github.com/austinEng/Project6-Vulkan-Flocking/blob/master/data/shaders/computeparticles/particle.comp
@compute @workgroup_size(64)
fn main(@builtin(global_invocation_id) global_invocation_id: vec3<u32>) {
  let total = arrayLength(&particlesSrc);
  let index = global_invocation_id.x;
  if (index >= total) {
    return;
  }

  var vPos: vec2<f32> = particlesSrc[index].pos;
  var vVel: vec2<f32> = particlesSrc[index].vel;

  var cMass: vec2<f32> = vec2<f32>(0.0, 0.0);
  var cVel: vec2<f32> = vec2<f32>(0.0, 0.0);
  var colVel: vec2<f32> = vec2<f32>(0.0, 0.0);
  var cMassCount: i32 = 0;
  var cVelCount: i32 = 0;

  var i: u32 = 0u;
  loop {
    if (i >= total) {
      break;
    }
    if (i == index) {
      continue;
    }

    let pos = particlesSrc[i].pos;
    let vel = particlesSrc[i].vel;

    if (distance(pos, vPos) < params.rule1Distance) {
      cMass += pos;
      cMassCount += 1;
    }
    if (distance(pos, vPos) < params.rule2Distance) {
      colVel -= pos - vPos;
    }
    if (distance(pos, vPos) < params.rule3Distance) {
      cVel += vel;
      cVelCount += 1;
    }
    continuing {
      i = i + 1u;
    }
  }
  if (cMassCount > 0) {
    cMass = cMass * (1.0 / f32(cMassCount)) - vPos;
  }
  if (cVelCount > 0) {
    cVel *= 1.0 / f32(cVelCount);
  }

  vVel = vVel + (cMass * params.rule1Scale) + (colVel * params.rule2Scale) + (cVel * params.rule3Scale);

  // clamp velocity for a more pleasing simulation
  vVel = normalize(vVel) * clamp(length(vVel), 0.0, 0.1);

  // kinematic update
  vPos += vVel * params.deltaT;

  // Wrap around boundary
  if (vPos.x < -1.0) {
    vPos.x = 1.0;
  }
  if (vPos.x > 1.0) {
    vPos.x = -1.0;
  }
  if (vPos.y < -1.0) {
    vPos.y = 1.0;
  }
  if (vPos.y > 1.0) {
    vPos.y = -1.0;
  }

  // Write back
  particlesDst[index] = Particle(vPos, vVel);
}
"
`;

exports[`end-to-end formatting > real-world shaders (from gfx-rs/wgpu, Apache-2.0/MIT) > formats shadow mapping shader 1`] = `
"// Source: https://github.com/gfx-rs/wgpu/blob/trunk/examples/features/src/shadow/shader.wgsl
// License: Apache-2.0 / MIT (https://github.com/gfx-rs/wgpu/blob/trunk/LICENSE.MIT)

struct Globals {
  view_proj: mat4x4<f32>,
  num_lights: vec4<u32>,
}

@group(0) @binding(0) var<uniform> u_globals: Globals;

struct Entity {
  world: mat4x4<f32>,
  color: vec4<f32>,
}

@group(1) @binding(0) var<uniform> u_entity: Entity;

@vertex
fn vs_bake(@location(0) position: vec4<i32>) -> @builtin(position) vec4<f32> {
  return u_globals.view_proj * u_entity.world * vec4<f32>(position);
}

struct VertexOutput {
  @builtin(position) proj_position: vec4<f32>,
  @location(0) world_normal: vec3<f32>,
  @location(1) world_position: vec4<f32>,
}

@vertex
fn vs_main(@location(0) position: vec4<i32>, @location(1) normal: vec4<i32>) -> VertexOutput {
  let w = u_entity.world;
  let world_pos = u_entity.world * vec4<f32>(position);
  var result: VertexOutput;
  result.world_normal = mat3x3<f32>(w[0].xyz, w[1].xyz, w[2].xyz) * vec3<f32>(normal.xyz);
  result.world_position = world_pos;
  result.proj_position = u_globals.view_proj * world_pos;
  return result;
}

// fragment shader

struct Light {
  proj: mat4x4<f32>,
  pos: vec4<f32>,
  color: vec4<f32>,
}

@group(0) @binding(1) var<storage, read> s_lights: array<Light>;
@group(0) @binding(1) var<uniform> u_lights: array<Light, 10>;
@group(0) @binding(2) var t_shadow: texture_depth_2d_array;
@group(0) @binding(3) var sampler_shadow: sampler_comparison;

fn fetch_shadow(light_id: u32, homogeneous_coords: vec4<f32>) -> f32 {
  if (homogeneous_coords.w <= 0.0) {
    return 1.0;
  }
  // compensate for the Y-flip difference between the NDC and texture coordinates
  let flip_correction = vec2<f32>(0.5, -0.5);
  // compute texture coordinates for shadow lookup
  let proj_correction = 1.0 / homogeneous_coords.w;
  let light_local = homogeneous_coords.xy * flip_correction * proj_correction + vec2<f32>(0.5, 0.5);
  // do the lookup, using HW PCF and comparison
  return
    textureSampleCompareLevel(
      t_shadow,
      sampler_shadow,
      light_local,
      i32(light_id),
      homogeneous_coords.z * proj_correction,
    );
}

const c_ambient: vec3<f32> = vec3<f32>(0.05, 0.05, 0.05);
const c_max_lights: u32 = 10u;

@fragment
fn fs_main(vertex: VertexOutput) -> @location(0) vec4<f32> {
  let normal = normalize(vertex.world_normal);
  // accumulate color
  var color: vec3<f32> = c_ambient;
  for (var i = 0u; i < min(u_globals.num_lights.x, c_max_lights); i += 1u) {
    let light = s_lights[i];
    // project into the light space
    let shadow = fetch_shadow(i, light.proj * vertex.world_position);
    // compute Lambertian diffuse term
    let light_dir = normalize(light.pos.xyz - vertex.world_position.xyz);
    let diffuse = max(0.0, dot(normal, light_dir));
    // add light contribution
    color += shadow * diffuse * light.color.xyz;
  }
  // multiply the light by material color
  return vec4<f32>(color, 1.0) * u_entity.color;
}

// The fragment entrypoint used when storage buffers are not available for the lights
@fragment
fn fs_main_without_storage(vertex: VertexOutput) -> @location(0) vec4<f32> {
  let normal = normalize(vertex.world_normal);
  var color: vec3<f32> = c_ambient;
  for (var i = 0u; i < min(u_globals.num_lights.x, c_max_lights); i += 1u) {
    // This line is the only difference from the entrypoint above. It uses the lights
    // uniform instead of the lights storage buffer
    let light = u_lights[i];
    let shadow = fetch_shadow(i, light.proj * vertex.world_position);
    let light_dir = normalize(light.pos.xyz - vertex.world_position.xyz);
    let diffuse = max(0.0, dot(normal, light_dir));
    color += shadow * diffuse * light.color.xyz;
  }
  return vec4<f32>(color, 1.0) * u_entity.color;
}
"
`;

exports[`end-to-end formatting > real-world shaders (from gfx-rs/wgpu, Apache-2.0/MIT) > formats skybox shader 1`] = `
"// Source: https://github.com/gfx-rs/wgpu/blob/trunk/examples/features/src/skybox/shader.wgsl
// License: Apache-2.0 / MIT (https://github.com/gfx-rs/wgpu/blob/trunk/LICENSE.MIT)

struct SkyOutput {
  @builtin(position) position: vec4<f32>,
  @location(0) uv: vec3<f32>,
}

struct Data {
  // from camera to screen
  proj: mat4x4<f32>,
  // from screen to camera
  proj_inv: mat4x4<f32>,
  // from world to camera
  view: mat4x4<f32>,
  // camera position
  cam_pos: vec4<f32>,
}

@group(0) @binding(0) var<uniform> r_data: Data;

@vertex
fn vs_sky(@builtin(vertex_index) vertex_index: u32) -> SkyOutput {
  // hacky way to draw a large triangle
  let tmp1 = i32(vertex_index) / 2;
  let tmp2 = i32(vertex_index) & 1;
  let pos = vec4<f32>(f32(tmp1) * 4.0 - 1.0, f32(tmp2) * 4.0 - 1.0, 1.0, 1.0);

  // transposition = inversion for this orthonormal matrix
  let inv_model_view = transpose(mat3x3<f32>(r_data.view[0].xyz, r_data.view[1].xyz, r_data.view[2].xyz));
  let unprojected = r_data.proj_inv * pos;

  var result: SkyOutput;
  result.uv = inv_model_view * unprojected.xyz;
  result.position = pos;
  return result;
}

struct EntityOutput {
  @builtin(position) position: vec4<f32>,
  @location(1) normal: vec3<f32>,
  @location(3) view: vec3<f32>,
}

@vertex
fn vs_entity(@location(0) pos: vec3<f32>, @location(1) normal: vec3<f32>) -> EntityOutput {
  var result: EntityOutput;
  result.normal = normal;
  result.view = pos - r_data.cam_pos.xyz;
  result.position = r_data.proj * r_data.view * vec4<f32>(pos, 1.0);
  return result;
}

@group(0) @binding(1) var r_texture: texture_cube<f32>;
@group(0) @binding(2) var r_sampler: sampler;

@fragment
fn fs_sky(vertex: SkyOutput) -> @location(0) vec4<f32> {
  return textureSample(r_texture, r_sampler, vertex.uv);
}

@fragment
fn fs_entity(vertex: EntityOutput) -> @location(0) vec4<f32> {
  let incident = normalize(vertex.view);
  let normal = normalize(vertex.normal);
  let reflected = incident - 2.0 * dot(normal, incident) * normal;

  let reflected_color = textureSample(r_texture, r_sampler, reflected).rgb;
  return vec4<f32>(vec3<f32>(0.1) + 0.5 * reflected_color, 1.0);
}
"
`;

exports[`end-to-end formatting > real-world shaders (from gfx-rs/wgpu, Apache-2.0/MIT) > formats water shader 1`] = `
"// Source: https://github.com/gfx-rs/wgpu/blob/trunk/examples/features/src/water/water.wgsl
// License: Apache-2.0 / MIT (https://github.com/gfx-rs/wgpu/blob/trunk/LICENSE.MIT)
// Note: comments removed for brevity; see original for full annotations

struct Uniforms {
  view: mat4x4<f32>,
  projection: mat4x4<f32>,
  time_size_width: vec4<f32>,
  viewport_height: f32,
}

@group(0) @binding(0) var<uniform> uniforms: Uniforms;

const light_point = vec3<f32>(150.0, 70.0, 0.0);
const light_colour = vec3<f32>(1.0, 0.98, 0.82);
const one = vec4<f32>(1.0, 1.0, 1.0, 1.0);

const Y_SCL: f32 = 0.86602540378443864676372317075294;
const CURVE_BIAS: f32 = -0.1;
const INV_1_CURVE_BIAS: f32 = 1.11111111111;

fn modf_polyfill_vec3(value: vec3<f32>, int_part: ptr<function, vec3<f32>>) -> vec3<f32> {
  *int_part = trunc(value);
  return value - *int_part;
}

fn modf_polyfill_vec4(value: vec4<f32>, int_part: ptr<function, vec4<f32>>) -> vec4<f32> {
  *int_part = trunc(value);
  return value - *int_part;
}

fn permute(x: vec4<f32>) -> vec4<f32> {
  var temp: vec4<f32> = 289.0 * one;
  return modf_polyfill_vec4(((x * 34.0) + one) * x, &temp);
}

fn taylorInvSqrt(r: vec4<f32>) -> vec4<f32> {
  return 1.79284291400159 * one - 0.85373472095314 * r;
}

fn snoise(v: vec3<f32>) -> f32 {
  let C = vec2<f32>(1.0 / 6.0, 1.0 / 3.0);
  let D = vec4<f32>(0.0, 0.5, 1.0, 2.0);

  let vCy = dot(v, C.yyy);
  var i: vec3<f32> = floor(v + vec3<f32>(vCy, vCy, vCy));
  let iCx = dot(i, C.xxx);
  let x0 = v - i + vec3<f32>(iCx, iCx, iCx);

  let g = step(x0.yzx, x0.xyz);
  let l = (vec3<f32>(1.0, 1.0, 1.0) - g).zxy;
  let i1 = min(g, l);
  let i2 = max(g, l);

  let x1 = x0 - i1 + C.xxx;
  let x2 = x0 - i2 + C.yyy;
  let x3 = x0 - D.yyy;

  var temp: vec3<f32> = 289.0 * one.xyz;
  i = modf_polyfill_vec3(i, &temp);
  let p =
    permute(
      permute(permute(i.zzzz + vec4<f32>(0.0, i1.z, i2.z, 1.0)) + i.yyyy + vec4<f32>(0.0, i1.y, i2.y, 1.0))
        + i.xxxx
        + vec4<f32>(0.0, i1.x, i2.x, 1.0),
    );

  let n_ = 0.142857142857;
  let ns = n_ * D.wyz - D.xzx;

  let j = p - 49.0 * floor(p * ns.z * ns.z);

  let x_ = floor(j * ns.z);
  let y_ = floor(j - 7.0 * x_);

  var x: vec4<f32> = x_ * ns.x + ns.yyyy;
  var y: vec4<f32> = y_ * ns.x + ns.yyyy;
  let h = one - abs(x) - abs(y);

  let b0 = vec4<f32>(x.xy, y.xy);
  let b1 = vec4<f32>(x.zw, y.zw);

  let s0 = floor(b0) * 2.0 + one;
  let s1 = floor(b1) * 2.0 + one;
  let sh = -step(h, 0.0 * one);

  let a0 = b0.xzyw + s0.xzyw * sh.xxyy;
  let a1 = b1.xzyw + s1.xzyw * sh.zzww;

  var p0 = vec3<f32>(a0.xy, h.x);
  var p1 = vec3<f32>(a0.zw, h.y);
  var p2 = vec3<f32>(a1.xy, h.z);
  var p3 = vec3<f32>(a1.zw, h.w);

  let norm = taylorInvSqrt(vec4<f32>(dot(p0, p0), dot(p1, p1), dot(p2, p2), dot(p3, p3)));
  p0 *= norm.x;
  p1 *= norm.y;
  p2 *= norm.z;
  p3 *= norm.w;

  var m: vec4<f32> = max(0.6 * one - vec4<f32>(dot(x0, x0), dot(x1, x1), dot(x2, x2), dot(x3, x3)), 0.0 * one);
  m *= m;
  return 9.0 * dot(m * m, vec4<f32>(dot(p0, x0), dot(p1, x1), dot(p2, x2), dot(p3, x3)));
}

fn apply_distortion(pos: vec3<f32>) -> vec3<f32> {
  var perlin_pos: vec3<f32> = pos;

  let sn = uniforms.time_size_width.x;
  let cs = uniforms.time_size_width.y;
  let size = uniforms.time_size_width.z;

  perlin_pos = vec3<f32>(perlin_pos.y - perlin_pos.x - size, perlin_pos.x, perlin_pos.z);

  let xcos = perlin_pos.x * cs;
  let xsin = perlin_pos.x * sn;
  let ycos = perlin_pos.y * cs;
  let ysin = perlin_pos.y * sn;
  let zcos = perlin_pos.z * cs;
  let zsin = perlin_pos.z * sn;

  let perlin_pos_y = vec3<f32>(xcos + zsin, perlin_pos.y, -xsin + xcos);

  let perlin_pos_z = vec3<f32>(xcos - ysin, xsin + ycos, perlin_pos.x);

  perlin_pos = vec3<f32>(perlin_pos.z - perlin_pos.x, perlin_pos.y, perlin_pos.x);

  let perlin_pos_x = vec3<f32>(perlin_pos.x, ycos - zsin, ysin + zcos);

  return
    vec3<f32>(
      pos.x + snoise(perlin_pos_x + 2.0 * one.xxx) * 0.4,
      pos.y + snoise(perlin_pos_y - 2.0 * one.xxx) * 1.8,
      pos.z + snoise(perlin_pos_z) * 0.4,
    );
}

fn make_position(original: vec2<f32>) -> vec4<f32> {
  let interpreted = vec3<f32>(original.x * 0.5, 0.0, original.y * Y_SCL);
  return vec4<f32>(apply_distortion(interpreted), 1.0);
}

fn make_normal(a: vec3<f32>, b: vec3<f32>, c: vec3<f32>) -> vec3<f32> {
  let norm = normalize(cross(b - c, a - c));
  let center = (a + b + c) * (1.0 / 3.0);
  return (normalize(a - center) * CURVE_BIAS + norm) * INV_1_CURVE_BIAS;
}

fn calc_fresnel(view: vec3<f32>, normal: vec3<f32>) -> f32 {
  var refractive: f32 = abs(dot(view, normal));
  refractive = pow(refractive, 1.33333333333);
  return refractive;
}

fn calc_specular(eye: vec3<f32>, normal: vec3<f32>, light: vec3<f32>) -> f32 {
  let light_reflected = reflect(light, normal);
  var specular: f32 = max(dot(eye, light_reflected), 0.0);
  specular = pow(specular, 10.0);
  return specular;
}

struct VertexOutput {
  @builtin(position) position: vec4<f32>,
  @location(0) f_WaterScreenPos: vec2<f32>,
  @location(1) f_Fresnel: f32,
  @location(2) f_Light: vec3<f32>,
}

@vertex
fn vs_main(@location(0) position: vec2<i32>, @location(1) offsets: vec4<i32>) -> VertexOutput {
  let p_pos = vec2<f32>(position);
  let b_pos = make_position(p_pos + vec2<f32>(offsets.xy));
  let c_pos = make_position(p_pos + vec2<f32>(offsets.zw));
  let a_pos = make_position(p_pos);
  let original_pos = vec4<f32>(p_pos.x * 0.5, 0.0, p_pos.y * Y_SCL, 1.0);

  let vm = uniforms.view;
  let transformed_pos = vm * a_pos;
  let water_pos = transformed_pos.xyz * (1.0 / transformed_pos.w);
  let normal = make_normal((vm * a_pos).xyz, (vm * b_pos).xyz, (vm * c_pos).xyz);
  let eye = normalize(-water_pos);
  let transformed_light = vm * vec4<f32>(light_point, 1.0);

  var result: VertexOutput;
  result.f_Light =
    light_colour * calc_specular(
      eye,
      normal,
      normalize(water_pos.xyz - (transformed_light.xyz * (1.0 / transformed_light.w))),
    );
  result.f_Fresnel = calc_fresnel(eye, normal);

  let gridpos = uniforms.projection * vm * original_pos;
  result.f_WaterScreenPos = (0.5 * gridpos.xy * (1.0 / gridpos.w)) + vec2<f32>(0.5, 0.5);

  result.position = uniforms.projection * transformed_pos;
  return result;
}

const water_colour = vec3<f32>(0.0, 0.46, 0.95);
const zNear = 10.0;
const zFar = 400.0;

@group(0) @binding(1) var reflection: texture_2d<f32>;
@group(0) @binding(2) var terrain_depth_tex: texture_2d<f32>;
@group(0) @binding(3) var colour_sampler: sampler;
@group(0) @binding(4) var depth_sampler: sampler;

fn to_linear_depth(depth: f32) -> f32 {
  let z_n = 2.0 * depth - 1.0;
  let z_e = 2.0 * zNear * zFar / (zFar + zNear - z_n * (zFar - zNear));
  return z_e;
}

@fragment
fn fs_main(vertex: VertexOutput) -> @location(0) vec4<f32> {
  let reflection_colour = textureSample(reflection, colour_sampler, vertex.f_WaterScreenPos.xy).xyz;

  let pixel_depth = to_linear_depth(vertex.position.z);
  let normalized_coords = vertex.position.xy / vec2<f32>(uniforms.time_size_width.w, uniforms.viewport_height);
  let terrain_depth = to_linear_depth(textureSample(terrain_depth_tex, depth_sampler, normalized_coords).r);

  let dist = terrain_depth - pixel_depth;
  let clamped = pow(smoothstep(0.0, 1.5, dist), 4.8);

  let final_colour = vertex.f_Light + reflection_colour;
  let t = smoothstep(1.0, 5.0, dist) * 0.2;
  let depth_colour = mix(final_colour, water_colour, vec3<f32>(t, t, t));

  return vec4<f32>(depth_colour, clamped * (1.0 - vertex.f_Fresnel));
}
"
`;
